--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <p>Sustainable Development Goal 2 aims to achieve "zero hunger". It is one of the 17 Sustainable Development Goals established by the United Nations in 2015. The official wording is: "End hunger, achieve food security and improved nutrition and promote sustainable agriculture".</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.jpg" alt="img">
+            <img src="img-1.jpg" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -105,7 +105,7 @@
             <p> By 2030, end hunger and ensure access by all people, in particular the poor and people in vulnerable situations, including infants, to safe, nutritious and sufficient food all year round.</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.jpg" alt="img">
+            <img src="img-1.jpg" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -114,7 +114,7 @@
             <p> By 2030, end hunger and ensure access by all people, in particular the poor and people in vulnerable situations, including infants, to safe, nutritious and sufficient food all year round.</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.jpg" alt="img">
+            <img src="img-1.jpg" alt="img">
           </div>
  
         </div>
@@ -128,7 +128,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./img/0715_india4.jpg" alt="img">
+          <img src="0715_india4.jpg" alt="img">
         </div>
       </div>
       <div class="col-right">
