--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>Goal 2 : Hunger</h1>
-            <p> By 2030, end hunger and ensure access by all people, in particular the poor and people in vulnerable situations, including infants, to safe, nutritious and sufficient food all year round.</p>
+            <h1>Goal 2 : Root </h1>
           </div>
           <div class="project-img">
             <img src="img-1.jpg" alt="img">
