--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Goal 2 : Root </h1>
+            <p>After decades of steady decline, the number of people who suffer from hunger – as measured by the prevalence of undernourishment – began to slowly increase again in 2015. Current estimates show that nearly 690 million people are hungry, or 8.9 percent of the world population – up by 10 million people in one year and by nearly 60 million in five years.</p>
           </div>
           <div class="project-img">
             <img src="img-1.jpg" alt="img">
@@ -202,3 +203,4 @@
 </body>
 
 </html>
+
