--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <h1 class="section-title">Zero<span>HUNGER</span></h1>
         <h2>Goal 2</h2>
         <p>Hunger is the leading cause of death in the world. Our planet has provided us with tremendous resources, but unequal access and inefficient handling leaves millions of people malnourished. If we promote sustainable agriculture with modern technologies and fair distribution systems, we can sustain the whole world’s population and make sure that nobody will ever suffer from hunger again.        </p>
-        <a href=" https://www.wfp.org/support-us/stories/food-assistance?utm_source=google&utm_medium=cpc&utm_campaign=12704487275&utm_content=120263933893&gclsrc=ds" target = "blank" class="cta">Donate Now</a>
+        <a href="https://donatenow.wfp.org/wfp/~my-donation?_cv=1" target = "blank" class="cta">Donate Now</a>
       </div>
     </div>
   </section>
