--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <div class="brand">
         <h1><span>H</span>ARSH<span>I</span>T</h1>
       </div>
-      <h2>DEVLOPED BY HARSHITxSINGH</h2>
+      <h2>DEVELOPED BY HARSHIT S </h2>
       <div class="social-icon">
         <div class="social-item">
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
