--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/ef29e7444e.js" crossorigin="anonymous"></script>
-  <title></title>
+ <title>Sustainable Development Goal 2</title>
 </head>
 
 <body>
