LINK  TAGS UPDATED
nul

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/ef29e7444e.js" crossorigin="anonymous"></script>
- <title>Sustainable Development Goal 2</title>
+  <title></title>
 </head>
 
 <body>
@@ -135,7 +135,7 @@
         <h1 class="section-title">Zero<span>HUNGER</span></h1>
         <h2>Goal 2</h2>
         <p>Hunger is the leading cause of death in the world. Our planet has provided us with tremendous resources, but unequal access and inefficient handling leaves millions of people malnourished. If we promote sustainable agriculture with modern technologies and fair distribution systems, we can sustain the whole world’s population and make sure that nobody will ever suffer from hunger again.        </p>
-        <a href="https://donatenow.wfp.org/wfp/~my-donation?_cv=1" target = "blank" class="cta">Donate Now</a>
+        <a href=" https://www.wfp.org/support-us/stories/food-assistance?utm_source=google&utm_medium=cpc&utm_campaign=12704487275&utm_content=120263933893&gclsrc=ds" target = "blank" class="cta">Donate Now</a>
       </div>
     </div>
   </section>
@@ -176,20 +176,26 @@
 
   <!-- Footer -->
   <section id="footer">
-    <div class="footer container">
+    <div class="footer container">       
       <div class="brand">
         <h1><span>H</span>ARSH<span>I</span>T</h1>
       </div>
-      <h2>DEVELOPED BY HARSHIT S </h2>
+      <h2>DEVLOPED BY HARSHITxSINGH</h2>
+<!-- 
+      https://www.facebook.com/unitednations/ 
+      https://twitter.com/UN?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor 
+      https://www.instagram.com/unitednations/?hl=en" -->
+
+
       <div class="social-icon">
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
+          <a href="https://www.facebook.com/unitednations/"target="_blank"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
+          <a href="https://www.instagram.com/unitednations/?hl=en"target="_blank"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
+          <a href="https://twitter.com/UN?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"target="_blank"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
         </div>
         <div class="social-item">
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
@@ -203,4 +209,3 @@
 </body>
 
 </html>
-
