--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   <section id="footer">
     <div class="footer container">       
       <div class="brand">
-        <h1><span>H</span>ARSH<span>I</span>T</h1>
+        <h1><span>H</span>ARSH<span>I</span>T™</h1>
       </div>
       <h2>DEVLOPED BY HARSHITxSINGH</h2>
 <!-- 
