--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1> <span></span></h1>
         <h1>Don't be rude, donate  <span></span></h1>
         <h1>some food.<span></span></h1>
-        <a href="#projects" type="button" class="cta">Explore</a>
+        <a href="#about" type="button" class="cta">Explore</a>
       </div>
     </div>
   </section>
