--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <li><a href="#hero" data-after="Home">Home</a></li>
             <li><a href="#services" data-after="Service">Slogans</a></li>
             <li><a href="#projects" data-after="Projects">ZeroHunger</a></li>
-            <li><a href="#about" data-after="About">About</a></li>
-            <li><a href="#contact" data-after="Contact">Donate</a></li>
+            <li><a href="#about" data-after="About">Donate</a></li>
+            <li><a href="#contact" data-after="Contact">Contact</a></li>
           </ul>
         </div>
       </div>
